--- a/src/components/Logo/Logo.css
+++ b/src/components/Logo/Logo.css
@@ -1,15 +1,12 @@
 
-.box-logo {
+.logo{
+  border: 1px solid red;
   width: 15.813rem;
   height: 2.75rem;
   display: flex;
-  justify-content: center;
   align-items: center;
-  gap: 0.5rem;
-}
-
-.box-logo a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  gap:.5rem;
+  font-size: 2.275rem;
+  font-weight: 600;
+  color: #C92071;
 }
