--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,15 +1,14 @@
 
 #header {
   width: 100%;
-  border: 1px solid red;
 }
 
 #header .box-header{
-  border: 1px solid red;
   width: 90rem;
   height: 12rem;
   margin: 0 auto;
   padding: 0 6.250rem;
+  display: flex;
 }
 
 #header .box-header .box-header-children{
@@ -17,4 +16,5 @@
    width: 62.063rem;
    height: 8.063rem;
    margin-top: 2.125rem;
+   display: flex;
 }
